; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/gss/extr_ccrypto.c_ccdes3_cbc_encrypt_mode.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/gss/extr_ccrypto.c_ccdes3_cbc_encrypt_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.ccmode_cbc* }
%struct.ccmode_cbc = type { i32 }

@g_crypto_funcs = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ccmode_cbc* @ccdes3_cbc_encrypt_mode() #0 {
  %1 = alloca %struct.ccmode_cbc*, align 8
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_crypto_funcs, align 8
  %3 = icmp ne %struct.TYPE_2__* %2, null
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_crypto_funcs, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load %struct.ccmode_cbc*, %struct.ccmode_cbc** %6, align 8
  store %struct.ccmode_cbc* %7, %struct.ccmode_cbc** %1, align 8
  br label %9

8:                                                ; preds = %0
  store %struct.ccmode_cbc* null, %struct.ccmode_cbc** %1, align 8
  br label %9

9:                                                ; preds = %8, %4
  %10 = load %struct.ccmode_cbc*, %struct.ccmode_cbc** %1, align 8
  ret %struct.ccmode_cbc* %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
